# falcn

./: .env.example  .falcnignore  .gitignore  .golangci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_TARGETS.md  DECISIONS.md  DOCKER.md  Dockerfile  Dockerfile.local  Dockerfile.test  Dockerfile.windows  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v2.0.0.md  ROADMAP.md  SECURITY.md  benchmark_report.md  cli_test_report.md  config.yaml  docker-compose.yml  embed_resources.go  errors.md  falcn.yaml  falcn_report.json  go.mod  go.sum  implementation_plan.md  main.go  project_review.md  supply_chain_result.json  supply_chain_result_dirt.json  task.md  test_logs_fail.md  verify_results.py
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
api/: Dockerfile  api_handlers_test.go  embed.go  go.mod  go.sum  main.go  main_test.go
cmd/: build_info.go  ci.go  compliance.go  fix.go  fix_test.go  helpers.go  report.go  root.go  scan.go  scan_images.go  serve.go  update_db.go  update_packages.go  version.go
config/: config.yaml  prometheus.yml  security.yaml
data/: popular_packages.json
demo/: run_demo.sh  setup_demo.sh
deploy/: migrate.sh  seed.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  FEATURE_AUDIT.md  INTEGRATIONS.md  OLLAMA_SETUP.md  PRODUCTION_GUIDE.md  README.md  SYSLOG_WRITER.md  USER_GUIDE.md  embedded-secrets.md  malicious-packages.md  obfuscated-code.md  openapi.json  policies.md  suspicious-behavior.md  swagger.html  (+1 more)
tests/benchmark/malicious/xz-sim/: configure.ac  package.json
(+391 files in other folders)
